Added HTML structure to webpage

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>hello, world</h1>
+<!DOCTYPE html>
+  <html>
+    <head>
+      <title> </title>
+    </head>
 
-<p> Learn Advanced Git </p>
+    <body>
+      <h1>hello, world</h1>
+      <p> Learn Advanced Git </p>
+    </body>
+
+  </html>
