Added a link to About Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body>
       <h1>hello, world</h1>
+      <a href="about.html">About this project</a>
       <p> Learn Advanced Git </p>
       <img src="images/breaching_whale.jpg">
     </body>
