Added Creative Commons Message

--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@
       <img src="images/breaching_whale.jpg">
     </body>
 
+    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
+      <img src="images/breaching_whale.jpg">
+    </a>
   </html>
